--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,19 @@ phases:
       - export VOLTA_HOME=$HOME/.volta
       - export PATH=$VOLTA_HOME/bin:$PATH
       - volta --version
-      - volta install node@20.13.1
-      - volta install pnpm@9.10.0
+      # - volta install node@20.13.1
+      # - volta install pnpm@9.10.0
+      # Volta 初期化 & Node.js インストール
+      - $VOLTA_HOME/bin/volta install node@20.13.1
+      # 🟡 VoltaでインストールしたNodeを有効にするための再読み込み
+      - hash -r
+      - which node
+      - node -v
+      - which npm
+      - npm -v
+      # pnpm のインストール
+      - npm install -g pnpm@9.10.0
+      - pnpm -v
       - export VOLTA_FEATURE_PNPM=1
       - node -v
       - pnpm -v
