--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,29 +1,13 @@
 version: 0.2
 phases:
   install:
+    runtime-versions:
+      nodejs: 20
     commands:
-      # pnpm系
-      - curl https://get.volta.sh | bash
-      - export VOLTA_HOME=$HOME/.volta
-      - export PATH=$VOLTA_HOME/bin:$PATH
-      - volta --version
-      # - volta install node@20.13.1
-      # - volta install pnpm@9.10.0
-      # Volta 初期化 & Node.js インストール
-      - $VOLTA_HOME/bin/volta install node@20.13.1
-      # 🟡 VoltaでインストールしたNodeを有効にするための再読み込み
-      - hash -r
-      - which node
-      - node -v
-      - which npm
-      - npm -v
-      # pnpm のインストール
       - npm install -g pnpm@9.10.0
-      - pnpm -v
-      - export VOLTA_FEATURE_PNPM=1
+      - pnpm config set store-dir ~/.pnpm-store
       - node -v
       - pnpm -v
-      - pnpm config set store-dir ~/.pnpm-store
   build:
     commands:
       - pnpm install --ignore-scripts --frozen-lockfile
