--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
       - openssl genrsa -out private_key.pem 2048
       - openssl rsa -pubout -in private_key.pem -out public_key.pem
       - ENCODED_PUBLIC_KEY=$(cat public_key.pem | awk '{printf "%s\\n", $0}')
+      - echo ${ENCODED_PUBLIC_KEY}
       - pnpm run secret ENCODED_KEY ${ENCODED_PUBLIC_KEY} --stage=production
       - pnpm run secret PRIVATE_KEY < ./private_key.pem --stage=production
       - rm -f private_key.pem public_key.pem
