--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,8 @@ phases:
       - volta -v
       - volta install node@20.13.1
       - node -v
-      - volta install pnpm@9.10.0
+      # - volta install pnpm@9.10.0
+      - volta install pnpm
       - export VOLTA_FEATURE_PNPM=1
       - hash -r
       - which pnpm
