--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,17 +2,12 @@ version: 0.2
 phases:
   install:
     commands:
-      # pnpm系
-      - curl https://get.volta.sh | bash
-      - export VOLTA_HOME=$HOME/.volta
-      - export PATH=$VOLTA_HOME/bin:$PATH
-      - echo $VOLTA_HOME
-      - echo $PATH
-      - volta -v
-      - volta install node@20.13.1
-      - node -v
       - export PNPM_VERSION=9.10.0
       - curl -fsSL https://get.pnpm.io/install.sh | bash -
+      - export PNPM_HOME="$HOME/.local/share/pnpm"
+      - export PATH="$PNPM_HOME:$PATH"
+      - echo $PNPM_HOME
+      - echo $PATH
       - pnpm -v
   build:
     commands:
