--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,9 +15,9 @@ phases:
       - openssl genrsa -out private_key.pem 2048
       - openssl rsa -pubout -in private_key.pem -out public_key.pem
       - ENCODED_PUBLIC_KEY=$(cat public_key.pem | awk '{printf "%s\\n", $0}')
-      - echo ${ENCODED_PUBLIC_KEY}
-      - pnpm run secret:encodekey --stage=production
-      - pnpm run secret:private --stage=production
+      - echo $ENCODED_PUBLIC_KEY
+      - pnpm run secret:encodekey --stage=production --print-logs
+      - pnpm run secret:private --stage=production --print-logs
       - rm -f private_key.pem public_key.pem
       - pnpm run unlock --stage=production --print-logs
       - pnpm run refresh --stage=production --print-logs
