--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,8 @@ phases:
   build:
     commands:
       - pnpm install --ignore-scripts --frozen-lockfile
+      - pnpm install
+      - pnpm run unlock --stage=production --print-logs
       - openssl genrsa -out private_key.pem 2048
       - openssl rsa -pubout -in private_key.pem -out public_key.pem
       - ENCODED_PUBLIC_KEY=$(cat public_key.pem | awk '{printf "%s\\n", $0}')
@@ -19,7 +21,6 @@ phases:
       - pnpm run secret:encodekey --stage=production --print-logs
       - pnpm run secret:private --stage=production --print-logs
       - rm -f private_key.pem public_key.pem
-      - pnpm run unlock --stage=production --print-logs
       - pnpm run refresh --stage=production --print-logs
       - pnpm run deploy --stage=production --print-logs
 cache:
