--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,8 @@ phases:
       - openssl rsa -pubout -in private_key.pem -out public_key.pem
       - ENCODED_PUBLIC_KEY=$(cat public_key.pem | awk '{printf "%s\\n", $0}')
       - echo $ENCODED_PUBLIC_KEY
-      - pnpm run secret:encodekey --stage=production --print-logs
+      - sst secret set ENCODED_PUBLIC_KEY $ENCODED_PUBLIC_KEY --stage=production --print-logs
+      # - pnpm run secret:encodekey --stage=production --print-logs
       - pnpm run secret:private --stage=production --print-logs
       - rm -f private_key.pem public_key.pem
       - pnpm run refresh --stage=production --print-logs
