--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,9 +19,9 @@ phases:
       - ENCODED_PUBLIC_KEY=$(cat public_key.pem | awk '{printf "%s\\n", $0}')
       - echo $ENCODED_PUBLIC_KEY
       - aws ssm put-parameter \
-        --name "/sst-test/cloudfront/production/publicKey" \
-        --type "SecureString" \
-        --value "$ENCODED_PUBLIC_KEY" \
+        --name /sst-test/cloudfront/production/publicKey \
+        --type SecureString \
+        --value $ENCODED_PUBLIC_KEY \
         --overwrite
       # - sst secret set ENCODED_PUBLIC_KEY $ENCODED_PUBLIC_KEY --stage=production --print-logs
       # - pnpm run secret:encodekey --stage=production --print-logs
