--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,6 +25,7 @@ phases:
       # - pnpm run secret:encodekey --stage=production --print-logs
       - pnpm run secret:private --stage=production --print-logs
       - rm -f private_key.pem public_key.pem
+      - pnpm run remove --stage=production --print-logs
       - pnpm run refresh --stage=production --print-logs
       - pnpm run deploy --stage=production --print-logs
 cache:
