--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,13 +18,20 @@ phases:
       - openssl rsa -pubout -in private_key.pem -out public_key.pem
       - ENCODED_PUBLIC_KEY=$(cat public_key.pem)
       - echo $ENCODED_PUBLIC_KEY
-      - aws secretsmanager create-secret --force-overwrite-replica-secret --name public_key --secret-binary fileb://public_key.pem
+      - |
+        if aws secretsmanager get-secret-value --secret-id public_key > /dev/null 2>&1; then
+          echo "existing secret"
+        else
+          echo "Creating new secret..."
+          aws secretsmanager create-secret --name public_key --secret-binary fileb://public_key.pem
+          pnpm run secret:private --stage=production --print-logs
+        fi
+      # - aws secretsmanager create-secret --force-overwrite-replica-secret --name public_key --secret-binary fileb://public_key.pem
       # - set -x
       # - aws ssm put-parameter --name "/sst-test/cloudfront/production/publicKey" --type "SecureString" --value $(cat public_key.pem) --overwrite
       # - set +x
       # - sst secret set ENCODED_PUBLIC_KEY $ENCODED_PUBLIC_KEY --stage=production --print-logs
       # - pnpm run secret:encodekey --stage=production --print-logs
-      - pnpm run secret:private --stage=production --print-logs
       - rm -f private_key.pem public_key.pem
       - pnpm run refresh --stage=production --print-logs
       - pnpm run deploy --stage=production --print-logs
