--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,8 +35,15 @@ phases:
       # - aws ssm get-parameter --name "/sst-test/cloudfront/production/privateKey" --with-decryption
       - aws ssm get-parameter --name "/sst-test/cloudfront/production/privateKey" --with-decryption --query "Parameter.Value" --output text > ./private_key.pem
       - cat private_key.pem
-      - pnpm run secret:private --stage=production --print-logs
-      - rm -f private_key.pem public_key.pem
+      - |
+        if ! sst secret list | grep -q "PRIVATE_KEY"; then
+          echo "PRIVATE_KEYシークレットが見つかりません。新しいシークレットを設定します。"
+          pnpm run secret:private --stage=production --print-logs
+        else
+          echo "PRIVATE_KEYシークレットはすでに存在します。"
+        fi
+      # - pnpm run secret:private --stage=production --print-logs
+      - rm -f private_key.pem
       - pnpm run refresh --stage=production --print-logs
       - pnpm run remove --stage=production
       - pnpm run deploy --stage=production --print-logs
