--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,14 +14,14 @@ phases:
       - pnpm install --ignore-scripts --frozen-lockfile
       - pnpm install
       - pnpm run unlock --stage=production --print-logs
-      # - openssl genrsa -out private_key.pem 2048
-      # - openssl rsa -pubout -in private_key.pem -out public_key.pem
-      # - ENCODED_PRIVATE_KEY=$(base64 private_key.pem)
-      # - ENCODED_PUBLIC_KEY=$(base64 public_key.pem)
-      # - echo $ENCODED_PRIVATE_KEY
-      # - echo $ENCODED_PUBLIC_KEY
-      # - pnpm run secret:encodekey --stage=production --print-logs
-      # - pnpm run secret:private:encodeKey --stage production --print-logs
+      - openssl genrsa -out private_key.pem 2048
+      - openssl rsa -pubout -in private_key.pem -out public_key.pem
+      - ENCODED_PRIVATE_KEY=$(base64 private_key.pem)
+      - ENCODED_PUBLIC_KEY=$(base64 public_key.pem)
+      - echo $ENCODED_PRIVATE_KEY
+      - echo $ENCODED_PUBLIC_KEY
+      - pnpm run secret:encodekey --stage=production --print-logs
+      - pnpm run secret:private:encodeKey --stage production --print-logs
       - aws ssm get-parameter --name "/sst-test/cloudfront/production/privateKey" --with-decryption --query "Parameter.Value" --output text > ./private_key.pem
       - cat private_key.pem
       - pnpm run secret:private --stage production --print-logs
