--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "refresh": "sst refresh",
     "unlock": "sst unlock",
     "secret:encodekey": "sst secret set ENCODED_PUBLIC_KEY $ENCODED_PUBLIC_KEY",
-    "secret:private": "sst secret set PRIVATE_KEY < ./private_key.pem",
+    "secret:public": "sst secret set ENCODED_PUBLIC_KEY < ./public_key.pem",
+    "secret:private": "sst secret set ENCODED_PRIVATE_KEY < ./private_key.pem",
     "secret:private:encodeKey": "sst secret set ENCODED_PRIVATE_KEY $ENCODED_PRIVATE_KEY",
     "secret:list": "sst secret list",
     "init": "sst init",
