--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,20 +13,27 @@ phases:
     commands:
       - pnpm install --ignore-scripts --frozen-lockfile
       - pnpm install
+      - echo "ENCODED_PRIVATE_KEY / ENCODED_PUBLIC_KEY の存在確認..."
+      - |
+        SECRETS=$(pnpm run secret:list --stage production)
+        has_private_key=false
+        has_public_key=false
+        echo "$SECRETS" | grep -q "^ENCODED_PRIVATE_KEY=" && has_private_key=true
+        echo "$SECRETS" | grep -q "^ENCODED_PUBLIC_KEY=" && has_public_key=true
+        if [ "$has_private_key" = false ] || [ "$has_public_key" = false ]; then
+          echo "ENCODED_PRIVATE_KEY または ENCODED_PUBLIC_KEY のいずれかが存在しません"
+          openssl genrsa -out private_key.pem 2048
+          openssl rsa -pubout -in private_key.pem -out public_key.pem
+          pnpm run secret:private --stage production --print-logs
+          pnpm run secret:public --stage=production --print-logs
+          echo $ENCODED_PRIVATE_KEY
+          echo $ENCODED_PUBLIC_KEY
+          cat private_key.pem
+          cat public_key.pem
+        else
+          echo "両方の secret が存在します"
+        fi
       - pnpm run unlock --stage=production --print-logs
-      - openssl genrsa -out private_key.pem 2048
-      - openssl rsa -pubout -in private_key.pem -out public_key.pem
-      # - ENCODED_PRIVATE_KEY=$(base64 private_key.pem)
-      # - ENCODED_PUBLIC_KEY=$(base64 public_key.pem)
-      - pnpm run secret:private --stage production --print-logs
-      - pnpm run secret:public --stage=production --print-logs
-      - echo $ENCODED_PRIVATE_KEY
-      - echo $ENCODED_PUBLIC_KEY
-      # - pnpm run secret:encodekey --stage=production --print-logs
-      # - pnpm run secret:private:encodeKey --stage production --print-logs
-      # - aws ssm get-parameter --name "/sst-test/cloudfront/production/privateKey" --with-decryption --query "Parameter.Value" --output text > ./private_key.pem
-      - cat private_key.pem
-      - pnpm run secret:private --stage production --print-logs
       - rm -f private_key.pem public_key.pem
       - pnpm run refresh --stage=production --print-logs
       # - pnpm run remove --stage=production
