--- a/hono-app/tsconfig.json
+++ b/hono-app/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
