--- a/hono-app/Dockerfile
+++ b/hono-app/Dockerfile
@@ -20,6 +20,10 @@ RUN npm install && \
 FROM base AS runner
 WORKDIR /app
 
+ENV NEW_RELIC_NO_CONFIG_FILE=true
+ENV NEW_RELIC_DISTRIBUTED_TRACING_ENABLED=true
+ENV NEW_RELIC_LOG=stdout
+
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 hono
 
