--- a/hono-app/package.json
+++ b/hono-app/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
-    "hono": "^4.7.4"
+    "hono": "^4.7.4",
+    "newrelic": "latest"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
