--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,9 @@ jobs:
       PNPM_VERSION: 10.6.5
       STAGE: production
       AWS_REGION: ap-northeast-1
-
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
