--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,5 +91,5 @@ jobs:
       - name: Remove (teardown)
         run: pnpm run remove --stage=$STAGE
       
-      - name: Deploy
-        run: pnpm run deploy --stage=$STAGE --print-logs
+      # - name: Deploy
+      #   run: pnpm run deploy --stage=$STAGE --print-logs
