--- a/hono-app/package.json
+++ b/hono-app/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "@types/newrelic": "^9.14.8"
   }
 }
