--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "secret:public": "sst secret set ENCODED_PUBLIC_KEY < ./public_key.pem",
     "secret:private": "sst secret set ENCODED_PRIVATE_KEY < ./private_key.pem",
     "secret:private:encodeKey": "sst secret set ENCODED_PRIVATE_KEY $ENCODED_PRIVATE_KEY",
+    "sst:secret:aws:accountid": "sst secret set AWS_ACCOUNT_ID $AWS_ACCOUNT_ID",
+    "sst:secret:newrelic:account:id": "sst secret set NEW_RELIC_ACCOUNT_ID $NEW_RELIC_ACCOUNT_ID",
+    "sst:secret:newrelic:license:key": "sst secret set NEW_RELIC_LICENSE_KEY $NEW_RELIC_LICENSE_KEY",
     "secret:list": "sst secret list",
     "init": "sst init",
     "typecheck": "tsc"
