--- a/.github/actions/save-secrets-newrelic/actions.yml
+++ b/.github/actions/save-secrets-newrelic/actions.yml
@@ -3,7 +3,7 @@ description: "This is a composite GitHub Action that saves secrets for NewRelic.
 
 inputs:
   stage:
-    description: "dev, qa, stg, prd"
+    description: "dev, qa, stg, production"
     required: true
   # aws-account-id:
   #   description: "The AWS account ID"
