--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Save NewRelic Secrets
         uses: ./.github/actions/save-secrets-newrelic
         with:
-          stage: dev
+          stage: production
           new-relic-account-id: ${{ secrets.NEW_RELIC_ACCOUNT_ID }}
           new-relic-license-key: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
 
