--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,8 @@ jobs:
             echo "::notice::Missing secrets – generating temporary RSA key pair"
             openssl genrsa -out private_key.pem 2048
             openssl rsa -pubout -in private_key.pem -out public_key.pem
-
+            pnpm run secret:private --stage production --print-logs
+            pnpm run secret:public --stage=production --print-logs
             # sst secret set の代わりに、ワークフロー内で環境変数としてエクスポート
             # ※永続的な GitHub Actions Secret に書き込む API は通常権限では不可
             export ENCODED_PRIVATE_KEY=$(base64 -w0 < private_key.pem)
