--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,8 +100,8 @@ jobs:
       - name: Refresh SST stage
         run: pnpm run refresh --stage=$STAGE --print-logs
 
-      # - name: Remove (teardown)
-      #   run: pnpm run remove --stage=$STAGE
+      - name: Remove (teardown)
+        run: pnpm run remove --stage=$STAGE
       
-      - name: Deploy
-        run: pnpm run deploy --stage=$STAGE --print-logs
+      # - name: Deploy
+      #   run: pnpm run deploy --stage=$STAGE --print-logs
