--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       NEW_RELIC_ACCOUNT_ID: ${{ secrets.NEW_RELIC_ACCOUNT_ID }}
       NEW_RELIC_API_KEY: ${{ secrets.NEW_RELIC_API_KEY }}
       NEW_RELIC_REGION: US
+      NEW_RELIC_SLACK_DESTINATION_ID: ${{ secrets.NEW_RELIC_SLACK_DESTINATION_ID }}
     permissions:
       id-token: write
       contents: read
@@ -86,6 +87,8 @@ jobs:
           stage: production
           new-relic-account-id: ${{ secrets.NEW_RELIC_ACCOUNT_ID }}
           new-relic-license-key: ${{ secrets.NEW_RELIC_LICENSE_KEY }}
+          new-relic-slack-destination-id: ${{ secrets.NEW_RELIC_SLACK_DESTINATION_ID }}
+          new-relic-slack-channel-id: ${{ secrets.NEW_RELIC_SLACK_CHANNEL_ID }}
 
       # 6. unlock 相当
       - name: Unlock SST stage
@@ -100,8 +103,8 @@ jobs:
       - name: Refresh SST stage
         run: pnpm run refresh --stage=$STAGE --print-logs
 
-      - name: Remove (teardown)
-        run: pnpm run remove --stage=$STAGE
+      # - name: Remove (teardown)
+      #   run: pnpm run remove --stage=$STAGE
       
-      # - name: Deploy
-      #   run: pnpm run deploy --stage=$STAGE --print-logs
+      - name: Deploy
+        run: pnpm run deploy --stage=$STAGE --print-logs
