--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "sst:secret:aws:accountid": "sst secret set AWS_ACCOUNT_ID $AWS_ACCOUNT_ID",
     "sst:secret:newrelic:account:id": "sst secret set NEW_RELIC_ACCOUNT_ID $NEW_RELIC_ACCOUNT_ID",
     "sst:secret:newrelic:license:key": "sst secret set NEW_RELIC_LICENSE_KEY $NEW_RELIC_LICENSE_KEY",
+    "sst:secret:newrelic:slack:destination:id": "sst secret set NEW_RELIC_SLACK_DESTINATION_ID $NEW_RELIC_SLACK_DESTINATION_ID",
+    "sst:secret:newrelic:slack:channel:id": "sst secret set NEW_RELIC_SLACK_CHANNEL_ID $NEW_RELIC_SLACK_CHANNEL_ID",
     "secret:list": "sst secret list",
     "init": "sst init",
     "typecheck": "tsc"
