--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,11 +100,11 @@ jobs:
         run: rm -f private_key.pem public_key.pem || true
 
       # === 必要に応じて ↓をアンコメント ===
+      - name: Refresh SST stage
+        run: pnpm run refresh --stage=$STAGE --print-logs
+
       - name: Diff SST stage
         run: pnpm run diff --stage=$STAGE --print-logs
-
-      # - name: Refresh SST stage
-      #   run: pnpm run refresh --stage=$STAGE --print-logs
 
       # - name: Remove (teardown)
       #   run: pnpm run remove --stage=$STAGE
